# ml-ops-zoomcamp

./: .gitignore  README.MD  pyproject.toml
homework/01-intro/: solution.md
homework/02-experiment-tracking/: homework.md
homework/02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
homework/03-orchestration/: homework.md
homework/04-deployment/: homework.md
homework/04-deployment/homework/: Dockerfile  starter.ipynb  starter.py
mlops/: docker-compose.yml  mlflow.dockerfile
mlops/mlops/: metadata.yaml
mlops/mlops/homework_03/custom/: check_data.py
mlops/mlops/homework_03/data_loaders/: ingest.py
mlops/mlops/homework_03/pipelines/homework3/: metadata.yaml
mlops/mlops/homework_03/transformers/: train.py  transform.py
models/: lin_reg.pkl
notebooks/: duration-prediction.ipynb
